--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1462,6 +1462,7 @@ jobs:
     parallelism: 2
     steps:
       - run: *shallow-git-clone
+      - run: sudo corepack enable
       - attach_workspace:
           at: .
       - run:
