--- a/package.json
+++ b/package.json
@@ -214,8 +214,10 @@
     "nonce-tracker@npm:^3.0.0": "patch:nonce-tracker@npm%3A3.0.0#~/.yarn/patches/nonce-tracker-npm-3.0.0-c5e9a93f9d.patch",
     "@trezor/schema-utils@npm:1.0.2": "patch:@trezor/schema-utils@npm%3A1.0.2#~/.yarn/patches/@trezor-schema-utils-npm-1.0.2-7dd48689b2.patch",
     "lavamoat-core@npm:^15.1.1": "patch:lavamoat-core@npm%3A15.1.1#~/.yarn/patches/lavamoat-core-npm-15.1.1-51fbe39988.patch",
-    "@metamask/snaps-sdk": "^4.3.0",
-    "@metamask/transaction-controller": "^32.0.0",
+    "@metamask/snaps-sdk": "4.0.1",
+    "@metamask/snaps-rpc-methods@^8.0.0": "8.0.0",
+    "@metamask/snaps-utils@^7.1.0": "7.2.0",
+    "@metamask/snaps-utils@^7.2.0": "7.2.0",
     "@babel/runtime@npm:^7.7.6": "patch:@babel/runtime@npm%3A7.24.0#~/.yarn/patches/@babel-runtime-npm-7.24.0-7eb1dd11a2.patch",
     "@babel/runtime@npm:^7.9.2": "patch:@babel/runtime@npm%3A7.24.0#~/.yarn/patches/@babel-runtime-npm-7.24.0-7eb1dd11a2.patch",
     "@babel/runtime@npm:^7.12.5": "patch:@babel/runtime@npm%3A7.24.0#~/.yarn/patches/@babel-runtime-npm-7.24.0-7eb1dd11a2.patch",
@@ -328,11 +330,11 @@
     "@metamask/selected-network-controller": "patch:@metamask/selected-network-controller@npm%3A12.0.1#~/.yarn/patches/@metamask-selected-network-controller-npm-12.0.1-34b2edf62d.patch",
     "@metamask/signature-controller": "^12.0.0",
     "@metamask/smart-transactions-controller": "^10.0.1",
-    "@metamask/snaps-controllers": "^8.2.0",
-    "@metamask/snaps-execution-environments": "^6.2.0",
-    "@metamask/snaps-rpc-methods": "^9.1.0",
-    "@metamask/snaps-sdk": "^4.3.0",
-    "@metamask/snaps-utils": "^7.4.0",
+    "@metamask/snaps-controllers": "patch:@metamask/snaps-controllers@npm%3A8.0.0#~/.yarn/patches/@metamask-snaps-controllers-npm-8.0.0-7e59688855.patch",
+    "@metamask/snaps-execution-environments": "6.0.2",
+    "@metamask/snaps-rpc-methods": "8.0.0",
+    "@metamask/snaps-sdk": "4.0.1",
+    "@metamask/snaps-utils": "7.2.0",
     "@metamask/transaction-controller": "^32.0.0",
     "@metamask/user-operation-controller": "^10.0.0",
     "@metamask/utils": "^8.2.1",
